# forge

./: .gitignore  LOG.md  README.md  pyproject.toml
dumps/ising/: tune_iw_mtm_pncg.json  tune_mtm_pncg.json  tune_pncg.json
dumps/llm/: baseline_outputs.json  mtm_sweep.csv  sweep.csv
forge/: ising.py  llm.py  pncg.py  quest.py
repl/: gif.py  ising_repl.py  llm_repl.py
slurm/: gen.sh
slurm/ising/: best.py  tune_iw_mtm_pncg.py  tune_mtm_pncg.py  tune_pncg.py
slurm/llm/: baseline.py  benchmark.py  best_iw_mtm_pncg.py  best_mtm_pncg.py  best_pncg.py  sanity.py  sanity_mtm_pncg.py  sanity_pncg.py  sweep_iw_mtm_pncg.sh  sweep_mtm_pncg.sh  sweep_pncg.sh
sweep/: iw_mtm_pncg.yml  mtm_pncg.yml  pncg.yml
tests/: test_pncg.py
