[project]
name = "mtm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.1",
]

[tool.setuptools]
packages = ["forge"]

