[project]
name = "mtm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "tabulate>=0.9.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.1",
    "wandb>=0.19.9",
]

[tool.setuptools]
packages = ["forge"]

